--- a/MilkyProject.WebUI/Views/Contact/Index.cshtml
+++ b/MilkyProject.WebUI/Views/Contact/Index.cshtml
@@ -11,7 +11,7 @@
             <ol class="breadcrumb justify-content-center mb-0">
                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                 <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Contact</li>
+                <li class="breadcrumb-item active" aria-current="page">İletişim</li>
             </ol>
         </nav>
     </div>
@@ -20,7 +20,7 @@
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-            <p class="section-title bg-white text-center text-primary px-3">Contact Us</p>
+            <p class="section-title bg-white text-center text-primary px-3">İletişim</p>
             <h1 class="mb-5">Lütfen bizimle iletişime geçiniz.</h1>
         </div>
         <div class="row g-5">
