--- a/MilkyProject.WebUI/Areas/Admin/Views/Register/Index.cshtml
+++ b/MilkyProject.WebUI/Areas/Admin/Views/Register/Index.cshtml
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="signup-content">
                 <div class="signup-form">
-                    <h2 class="form-title">Sign up</h2>
+                    <h2 class="form-title">Kayıt Ol</h2>
                     <form method="post" class="register-form">
                         <div class="form-group">
                             <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
